--- a/ViewRModInstaller.csproj
+++ b/ViewRModInstaller.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Content Include="resources\assets\gfxplugin-viewr.dll" />
     <Content Include="resources\assets\ViewRMod.dll" />
+    <Content Include="resources\viewrmodicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
