improved error logging, improved default case handling

--- a/resources/assets/configs/viewrplugin.cfg
+++ b/resources/assets/configs/viewrplugin.cfg
@@ -2,5 +2,8 @@
 leveltoloadon = -1
 
 #Tells the mod what kind of tracking api the game is using. Types are: none, unityxr, steamvr.
-trackingtype = unityxr
+trackingtype = steamvr
 
+#Beat Saber has some pretty effects that need to be set manually.
+#Is this game Beat Saber?
+configureforbeatsaber = false
