Fixed display of version at top of app. App version is updated using Automatic Versions 1 addon for Visual Studio 2017. https://marketplace.visualstudio.com/items?itemName=PrecisionInfinity.AutomaticVersions

--- a/ViewRModInstaller.csproj
+++ b/ViewRModInstaller.csproj
@@ -47,8 +47,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -85,6 +85,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="resources\assets\configs\Beat Saber.zip" />
     <None Include="resources\assets\configs\SUPERHOTVR.zip" />
     <None Include="resources\assets\configs\viewrcamera.cfg" />
@@ -93,7 +94,6 @@
     <None Include="resources\assets\IPA.zip" />
     <None Include="resources\assets\viewr.asset" />
     <None Include="resources\games.json" />
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -132,7 +132,7 @@ rem copy /Y $(SolutionDir)resources\assets\configs $(TargetDir)assets\configs</P
   </PropertyGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_UseGlobalSettings="True" />
+      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
