added CheckOnClick = true; to lstbox to make single clicks check and uncheck the checkboxes

--- a/ViewRModInstaller.csproj
+++ b/ViewRModInstaller.csproj
@@ -46,6 +46,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ViewR.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -111,6 +114,7 @@
     <Content Include="resources\assets\gfxplugin-viewr.dll" />
     <Content Include="resources\assets\ViewRMod.dll" />
     <Content Include="resources\viewrmodicon.ico" />
+    <Content Include="ViewR.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -132,7 +136,7 @@ rem copy /Y $(SolutionDir)resources\assets\configs $(TargetDir)assets\configs</P
   </PropertyGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_UseGlobalSettings="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
